--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *~
 .DS_Store
 ._.DS_Store
-.*.swp
+.*.sw[po]
 errors.err
 cover_db
 covered
@@ -12,3 +12,4 @@ MYMETA*
 MANIFEST.bak
 Makefile
 pm_to_blib
+*.tar.gz
